tests/baselines/reference/compoundAdditionAssignmentLHSCannotBeAssigned.errors.txt
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCannotBeAssigned.ts(5,1): error TS2322: Type '文字' is not assignable to type '真假'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCannotBeAssigned.ts(8,1): error TS2322: Type '文字' is not assignable to type '数字'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCannotBeAssigned.ts(11,1): error TS2322: Type '文字' is not assignable to type 'E'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCannotBeAssigned.ts(14,1): error TS2322: Type '文字' is not assignable to type '{ a: 文字; }'.
tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCannotBeAssigned.ts(17,1): error TS2322: Type '文字' is not assignable to type '无值'.


==== tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCannotBeAssigned.ts (5 errors) ====
    // string can add every type, and result string cannot be assigned to below types
    enum E { a, b, c }
    
    var x1: boolean;
    x1 += '';
    ~~
!!! error TS2322: Type '文字' is not assignable to type '真假'.
    
    var x2: number;
    x2 += '';
    ~~
!!! error TS2322: Type '文字' is not assignable to type '数字'.
    
    var x3: E;
    x3 += '';
    ~~
!!! error TS2322: Type '文字' is not assignable to type 'E'.
    
    var x4: {a: string};
    x4 += '';
    ~~
!!! error TS2322: Type '文字' is not assignable to type '{ a: 文字; }'.
    
    var x5: void;
    x5 += '';
    ~~
!!! error TS2322: Type '文字' is not assignable to type '无值'.